--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -603,6 +603,7 @@ footer .social-links li:first-child { margin-left: 0; }
 .eventfont{
     font-family:'Carter One', cursive;
     font-size: 2rem;
+    color:#095153;
 }
 
 
